--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
     <!-- Favicon
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/labLENI-logo.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/labLENI-logo.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/IKEA-Logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/IKEA-Logo.png">
 
     <!-- Stylesheets
     ================================================== -->
@@ -56,7 +56,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     
-                    <a href="#hero" class="site-logo"><img width="40" height="50" src="assets/img/labLENI-logo-black.png" alt="logo"></a>
+                    <a href="#hero" class="site-logo"><img width="80" height="50" src="assets/img/IKEA-Logo.png" alt="logo"></a>
 
                 </div><!-- /.navbar-header -->
 
