--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <h2>Sobre mi</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                         <p>¡Hola! Soy Aitor Mira Abad, Data Scientist e Ingeniero Civil. A continuación puedes explorar mi curriculum, un resumen de mis conocimientos y una muestra de los proyectos más relevantes en los que he participado. </p>
-                        <a href="https://drive.google.com/open?id=1zzUziY1MzMNb3rUgo0yoXVoxrpA1AZg4" class="btn btn-fill" target="_blank" download>Descarga mi cv</a>
+                        <a href="https://drive.google.com/open?id=1zzUziY1MzMNb3rUgo0yoXVoxrpA1AZg4" class="btn btn-fill" target="_blank" download>Download my cv</a>
                     </div>
                 </div>
             </div>
