Update and fix logo
Se pone el logo general para la página.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
     <!-- Favicon
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/logo-zurich-seguros.jpg">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/logo-zurich-seguros.jpg">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/ai_logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/ai_logo.png">
 
     <!-- Stylesheets
     ================================================== -->
@@ -56,7 +56,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     
-                    <a href="#hero" class="site-logo"><img width="80" height="70" src="assets/img/logo-zurich-seguros.jpg" alt="logo"></a>
+                    <a href="#hero" class="site-logo"><img width="80" height="80" src="assets/img/ai_logo.png" alt="logo"></a>
 
                 </div><!-- /.navbar-header -->
 
