Fix counters static data

--- a/index.html
+++ b/index.html
@@ -422,12 +422,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-4 col-xs-12">
-                        <p class="counter start" data-to="4" data-speed="2000">0</p>
+                        <p class="counter start">5</p>
                         <h4>Años de experiencia</h4>
                     </div>
                     <div class="col-sm-4 col-xs-12">
-                        <p class="counter start" data-to="20" data-speed="2000">0</p>       
-                        <h4>Proyectos desarrollados</h4>      
+                        <p class="counter start">20</p>
+                        <h4>Proyectos desarrollados</h4>
                     </div>
                     <div class="col-sm-4 col-xs-12">
                         <p id="infinity" class="counter" data-from="0" data-to="1" data-speed="1000">0</p>
