--- a/index.html
+++ b/index.html
@@ -440,11 +440,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-4 col-xs-12">
-                        <p class="counter start">5</p>
+                        <p class="counter" data-from="5">5</p>
                         <h4>Años de experiencia</h4>
                     </div>
                     <div class="col-sm-4 col-xs-12">
-                        <p class="counter start">+20</p>
+                        <p class="counter" data-from="20">+20</p>
                         <h4>Proyectos desarrollados</h4>
                     </div>
                     <div class="col-sm-4 col-xs-12">
