Specify NLP huggingface

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="skill">
-                            <h4>NLP</h4>
+                            <h4>NLP/HuggingFace</h4>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" data-transitiongoal="72"></div><!-- /.progress-bar -->
                             </div><!-- /.progress -->
