--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
 
     <!-- Basic Page Needs
@@ -75,8 +75,8 @@
                     <ul class="nav navbar-nav navbar-right">
 
                         <li class="page-scroll"><a href="#hero">Home</a></li>
-                        <li class="page-scroll"><a href="#about">Sobre mi</a></li>
-                        <li class="page-scroll"><a href="#skills">Habilidades</a></li>
+                        <li class="page-scroll"><a href="#about">About me</a></li>
+                        <li class="page-scroll"><a href="#skills">Skills</a></li>
                         <li class="page-scroll"><a href="#portfolio">Portfolio</a></li>
 
                     </ul><!-- /.navbar-nav -->
@@ -115,16 +115,14 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-md-offset-3">
-                        <h2>Sobre mi</h2>
+                        <h2>About me</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                         <p>¡Hola! Soy Aitor Mira Abad, Data Scientist e Ingeniero Civil. A continuación puedes explorar mi curriculum, un resumen de mis conocimientos y una muestra de los proyectos más relevantes en los que he participado. </p>
                         <a href="https://drive.google.com/open?id=1Mwh4bH20R7vIXZFaaCyj138uSCjnynJy" class="btn btn-fill" target="_blank" download>Download my cv</a>
                     </div>
                 </div>
             </div>
-        </section><!-- /.secton-about -->
-
-        <!-- section id="service" class="site-section section-services overlay text-center" -->
+        </section>
 
         <section id="skills" class="site-section section-services section-skills">
             <div class="container">
@@ -268,7 +266,7 @@
         <section id="portfolio" class="site-section section-portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h3>Mis proyectos destacados</h3>
+                    <h3>Outstanding projects</h3>
                     <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                 </div>
                 <div class="row">
@@ -375,15 +373,15 @@
                 <div class="row">
                     <div class="col-sm-4 col-xs-12">
                         <p class="counter" data-from="5">5</p>
-                        <h4>Años de experiencia</h4>
+                        <h4>Relevant experience year</h4>
                     </div>
                     <div class="col-sm-4 col-xs-12">
                         <p class="counter" data-from="20">+20</p>
-                        <h4>Proyectos desarrollados</h4>
+                        <h4>Projects done</h4>
                     </div>
                     <div class="col-sm-4 col-xs-12">
                         <p id="infinity" class="counter" data-from="0" data-to="1" data-speed="1000">0</p>
-                        <h4>Segundos en esta web<br>¿A qué esperas?</h4>
+                        <h4>Seconds in web<br>What are you waiting for?</h4>
                     </div>
                 </div>
             </div>
