Translate About me section

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <div class="col-md-6 col-md-offset-3">
                         <h2>About me</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
-                        <p>¡Hola! Soy Aitor Mira Abad, Data Scientist e Ingeniero Civil. A continuación puedes explorar mi curriculum, un resumen de mis conocimientos y una muestra de los proyectos más relevantes en los que he participado. </p>
+                        <p>Hi! I'm Aitor Mira Abad, Data Scientist and Civil Engineer. Below you can explore my resume, a summary of my knowledge and a sample of the most relevant projects I have participated in. </p>
                         <a href="https://drive.google.com/open?id=1Mwh4bH20R7vIXZFaaCyj138uSCjnynJy" class="btn btn-fill" target="_blank" download>Download my cv</a>
                     </div>
                 </div>
