--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <div class="col-md-6 col-md-offset-3">
                         <h2>About me</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
-                        <p>Hi! I'm Aitor Mira Abad, Data Scientist and Civil Engineer. Below you can explore my resume, a summary of my knowledge and a sample of the most relevant projects I have participated in. </p>
+                        <p>Hi! I'm Aitor Mira Abad, Data Scientist and Civil Engineer. Below you can explore my resume, a summary of my knowledge and a sample of the most relevant projects I have worked in. </p>
                         <a href="https://drive.google.com/open?id=1Mwh4bH20R7vIXZFaaCyj138uSCjnynJy" class="btn btn-fill" target="_blank" download>Download my cv</a>
                     </div>
                 </div>
@@ -266,7 +266,7 @@
         <section id="portfolio" class="site-section section-portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h3>Outstanding projects</h3>
+                    <h3>Relevant projects</h3>
                     <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                 </div>
                 <div class="row">
@@ -373,7 +373,7 @@
                 <div class="row">
                     <div class="col-sm-4 col-xs-12">
                         <p class="counter" data-from="5">5</p>
-                        <h4>Relevant experience year</h4>
+                        <h4>Relevant experience years</h4>
                     </div>
                     <div class="col-sm-4 col-xs-12">
                         <p class="counter" data-from="20">+20</p>
