Water consumption forecast

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                         <div class="portfolio-item">
                             <img src="https://pbs.twimg.com/media/EW62JyOXQAApNXm.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Predicción del consumo de agua</h4>
+                                <h4>Water consumption forecast</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span class="glyphicon glyphicon-eye-open"></span></a>
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
@@ -398,15 +398,15 @@
             <img class="img-res" src="https://pbs.twimg.com/media/EW62JyOXQAApNXm.jpg" alt="">
           </div>
           <div class="modal-body">
-            <h4 class="modal-title">Predicción de consumo de agua</h4>
-            <h5 class="modal-title">Empresa:</h5>
+            <h4 class="modal-title">Water consumption forecast</h4>
+            <h5 class="modal-title">Company:</h5>
             	<p>Aquaservice<p>
-        	<h5 class="modal-title">Descripción:</h5>
-            	<p>El objetivo del proyecto era realizar una predicción precisa cada miércoles del consumo de botellas de agua que se va a realizar en cada almacén día a día durante la semana siguiente. Los resultados dan accuracies proximos al 95%.</p>
-            <h5 class="modal-title">Técnicas usadas:</h5>
-            	<p>La predicción se realiza mediante la combinación de distintos algoritmos de aprendizaje automático basados tanto en arboles de decisión como gradient boost mendiante tecnicas de stacking. Tiene en cuenta variables propias de la operativa, estacionalides e incluso previsiones meteorológicas.<p>
-            <h5 class="modal-title">Rol desempeñado:</h5>
-            	<p>Lider de equipo y desarrollador.<p>
+        	<h5 class="modal-title">What:</h5>
+            	<p>The objective of the project was to make an accurate forecast for water bottle consumption consumption that will be made in each warehouse on a daily basis during the following week. The results gave accuracies up to 95%.</p>
+            <h5 class="modal-title">How:</h5>
+            	<p>The forecast is performed by combining different machine learning algorithms based on decision trees and gradient boost using stacking techniques. It takes into account operational variables, seasonality and even weather forecasts.<p>
+            <h5 class="modal-title">My role:</h5>
+            	<p>Team lead and dev.<p>
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
