Translate: Long term stock forecast and management

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                         <div class="portfolio-item">
                             <img src="https://images.pexels.com/photos/7807594/pexels-photo-7807594.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Gestión de stock a largo plazo</h4>
+                                <h4>Long term stock forecast and management</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem10"><span class="glyphicon glyphicon-eye-open"></span></a>
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
@@ -605,15 +605,15 @@
             <img class="img-res" src="https://images.pexels.com/photos/7807594/pexels-photo-7807594.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
           </div>
           <div class="modal-body">
-            <h4 class="modal-title">Gestión de stock a largo plazo</h4>
-            <h5 class="modal-title">Empresa:</h5>
+            <h4 class="modal-title">Long term stock forecast and management</h4>
+            <h5 class="modal-title">Company:</h5>
             	<p>Nextail.<p>
-        	<h5 class="modal-title">Descripción:</h5>
-            	<p>Predicción de ventas de productos a largo plazo (termporadas) teniendo en cuenta los distintos plazos de producción, entrega trannsporte a almacén y tienda de forma que el stock no se rompa en el periodo de tiempo determinado. </p>
-            <h5 class="modal-title">Técnicas usadas:</h5>
-            	<p>Técnicas de predicción de series temporales, desestacionalización, gestión de stock-outs y otros efectos propios del sector retail.<p>
-            <h5 class="modal-title">Rol desempeñado:</h5>
-            	<p>Desarrollador.<p>
+        	<h5 class="modal-title">What:</h5>
+            	<p>Long-term product sales forecasting (seasons) taking into account the different production, delivery, transportation to warehouse and store deadlines so that the stock is not broken in the given period of time.</p>
+            <h5 class="modal-title">How:</h5>
+            	<p>Time series forecasting techniques, deseasonalization, stock-outs management and other effects specific to the retail sector.<p>
+            <h5 class="modal-title">My role:</h5>
+            	<p>Core algorithms dev.<p>
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
