Translate: Project sub-sections

--- a/index.html
+++ b/index.html
@@ -421,13 +421,13 @@
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Predicción de carga de vehículos de reparto</h4>
-            <h5 class="modal-title">Empresa:</h5>
+            <h5 class="modal-title">Where:</h5>
             	<p>Aquaservice<p>
-        	<h5 class="modal-title">Descripción:</h5>
+        	<h5 class="modal-title">What:</h5>
             	<p>Cada día se realiza una predicción para cada camión de reparto y cada turno de las botellas que repartirá el día siguiente. Para ello se utilizan técnicas de gradient boosting teniendo en cuenta variables propias de la operativa, información de los clientes a repartir así como de la veteranía de los repartidores. Se obtienen ahorros superiores al 30% de carga que no iba a ser repartida.</p>
-            <h5 class="modal-title">Técnicas usadas:</h5>
+            <h5 class="modal-title">How:</h5>
             	<p>Para ello se utilizan técnicas de gradient boosting teniendo en cuenta variables propias de la operativa, información de los clientes a repartir así como de la veteranía de los repartidores.<p>
-            <h5 class="modal-title">Rol desempeñado:</h5>
+            <h5 class="modal-title">My role:</h5>
             	<p>Lider de equipo y desarrollador.<p>
           </div>
         </div><!-- /.modal-content -->
@@ -443,13 +443,13 @@
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Clasificación de mensajes automática</h4>
-            <h5 class="modal-title">Empresa:</h5>
+            <h5 class="modal-title">Where:</h5>
             	<p>Aquaservice<p>
-        	<h5 class="modal-title">Descripción:</h5>
+        	<h5 class="modal-title">What:</h5>
             	<p>Cuando un cliente envía un mensaje a atención al cliente a través de la APP, este pasa previamente por un clasificador que decide si el mensaje requiere una gestión manual de alguna operadora o si puede ser resuelto mediante alguno de los flujos automáticos definidos. Se alcanzan precisiones superiores al 90% y sensibilidades según el flujo supriores al 80%.</p>
-            <h5 class="modal-title">Técnicas usadas:</h5>
+            <h5 class="modal-title">How:</h5>
             	<p>Para la clasificación se utilizan tecnicas de NLP basadas en el Transformer BERT adaptadas para el problema particular considerando como input únicamente el texto.<p>
-            <h5 class="modal-title">Rol desempeñado:</h5>
+            <h5 class="modal-title">My role:</h5>
             	<p>Lider de equipo y desarrollador.<p>
           </div>
         </div><!-- /.modal-content -->
@@ -465,13 +465,13 @@
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Meta-optimizáción de rutas</h4>
-            <h5 class="modal-title">Empresa:</h5>
+            <h5 class="modal-title">Where:</h5>
             	<p>Aquaservice<p>
-        	<h5 class="modal-title">Descripción:</h5>
+        	<h5 class="modal-title">What:</h5>
             	<p>Con la adquisición de nuevos clientes las rutas de reparto se van descompensando con el tiempo. Para corregirlo se realizan reoganización/optimizaciones de rutas mediante software específicos que realizan la taea. Sin embargo esto genera adelantos y retrasos a los clientes al modificar las rutas provocando importantes perdidas de facturación a la empresa.</p>
-            <h5 class="modal-title">Técnicas usadas:</h5>
+            <h5 class="modal-title">How:</h5>
             	<p>Mediante ingeniería inversa del software específico, en base a los resultados del software se "trucan" los datos de entrada introduciendo prioridades para minimizar retrasos/adelantos.<p>
-            <h5 class="modal-title">Rol desempeñado:</h5>
+            <h5 class="modal-title">My role:</h5>
             	<p>Lider de equipo y desarrollador.<p>
           </div>
         </div><!-- /.modal-content -->
@@ -487,13 +487,13 @@
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Modelo de accesibilidad al transporte público. Alacant/Elx.</h4>
-            <h5 class="modal-title">Universidad:</h5>
+            <h5 class="modal-title">UnivWhere:</h5>
             	<p>Universitat Politècnica de València.<p>
-        	<h5 class="modal-title">Descripción:</h5>
+        	<h5 class="modal-title">What:</h5>
             	<p>En el ambito del desarrollo del PMoMe Alacant/Elx se desarrolla un modelo que permite calcular el índice de accesibilidad al transporte público en base a la población y su distribución espacial. En el link se puede visualizar parte de los resultados.</p>
-            <h5 class="modal-title">Técnicas usadas:</h5>
+            <h5 class="modal-title">How:</h5>
             	<p>Se utilizan herramientas de GIS (Sistemas de Información Geográfica) basadas en Python, utilizando algoritmos de busqueda de vecinos cercanos como KDTree.<p>
-            <h5 class="modal-title">Rol desempeñado:</h5>
+            <h5 class="modal-title">My role:</h5>
             	<p>Autor único.<p>
           </div>
           <div class="modal-footer">
@@ -512,13 +512,13 @@
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Operación paso del estrecho</h4>
-            <h5 class="modal-title">Empresa:</h5>
+            <h5 class="modal-title">Where:</h5>
             	<p>CPS Infraestructuras Movilidad y Medio Ambiente para Dirección General de Tráfico.<p>
-        	<h5 class="modal-title">Descripción:</h5>
+        	<h5 class="modal-title">What:</h5>
             	<p>Todos los años durante festividades de origen musulmanas, gran cantidad de Marrroquíes de toda Europa vuelven a Marruecos a pasar unos días de vacaciones. Estos desplazamientos se concentran al llegar en coche para embarcar en el ferry de Algeciras generando colas que duran días con problemas de bastecimiento de agua y comida. Se anticipa la llegada de vehículos con distintas horas de antelación para planificar las horas punta.</p>
-            <h5 class="modal-title">Técnicas usadas:</h5>
+            <h5 class="modal-title">How:</h5>
             	<p>Para ello se utilizan técnicas de gradient boosting teniendo en cuenta datos de aforos de vehiculos en varios puntos de la peninsula.<p>
-            <h5 class="modal-title">Rol desempeñado:</h5>
+            <h5 class="modal-title">My role:</h5>
             	<p>Ingeniero de transportes y desarrollador.<p>
           </div>
         </div><!-- /.modal-content -->
@@ -534,13 +534,13 @@
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Espaciamiento de señalización vial</h4>
-            <h5 class="modal-title">Empresa:</h5>
+            <h5 class="modal-title">Where:</h5>
             	<p>CPS Infraestructuras Movilidad y Medio Ambiente para Dirección General de Tráfico.<p>
-        	<h5 class="modal-title">Descripción:</h5>
+        	<h5 class="modal-title">What:</h5>
             	<p>Dentro del programa de Refuerzo de seguridad en zonas de adelantamiento con mayor siniestralidad de la DGT, se realizó un estudio sobre la saturación de señales de limitación de velocidad y aviso de peligros que se daba en determinadas carreteras secundarias. Estas se redujeron o espaciaron adecuadamente para facilitar la atención de los conductores.</p>
-            <h5 class="modal-title">Técnicas usadas:</h5>
+            <h5 class="modal-title">How:</h5>
             	<p>Se emplearon teorías básicas de atención y vigilancia humana aplicadas a la señalización vertical.<p>
-            <h5 class="modal-title">Rol desempeñado:</h5>
+            <h5 class="modal-title">My role:</h5>
             	<p>Ingeniero de transportes.<p>
 		  </div>
           <div class="modal-footer">
@@ -559,13 +559,13 @@
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Sistema gestión de resíduos inertes</h4>
-            <h5 class="modal-title">Empresa:</h5>
+            <h5 class="modal-title">Where:</h5>
             	<p>Freelance para Asociación de Marmol de Alicante.<p>
-        	<h5 class="modal-title">Descripción:</h5>
+        	<h5 class="modal-title">What:</h5>
             	<p>Se trata de la digitalización del sistema de gestión de residuos inertes utilizado por la Asociación de Marmol de Alicante que permitía a las empresas productoras verter sus resíduos en un deposito centralizado mediante un sistema de vales que tenían que comprar. Se desarrolla un sistema basado en web de gestión con perfiles de usuario específicos para la asociación, la empresa productora y los operarios del depósito. Se integra la trazabilidad, facturación y operaciones de la actividad. </p>
-            <h5 class="modal-title">Técnicas usadas:</h5>
+            <h5 class="modal-title">How:</h5>
             	<p>Sistema basado en el cloud de AWS (DynamoDB+Lambda+Amplify+API Gateway) implementando web desarrollada en React JS.<p>
-            <h5 class="modal-title">Rol desempeñado:</h5>
+            <h5 class="modal-title">My role:</h5>
             	<p>Manager y desarrollador.<p>
           </div>
           <div class="modal-footer">
@@ -584,13 +584,13 @@
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Predicción de ventas sin histórico</h4>
-            <h5 class="modal-title">Empresa:</h5>
+            <h5 class="modal-title">Where:</h5>
             	<p>Nextail.<p>
-        	<h5 class="modal-title">Descripción:</h5>
+        	<h5 class="modal-title">What:</h5>
             	<p> Problema de tipo cold-start forecasting aplicado al sector retail con la introducción de nuevos productos. La predicción se realiza en base a los atributos de los propios productos teniendo un histórico de ventas de otros productos y sus atributos. </p>
-            <h5 class="modal-title">Técnicas usadas:</h5>
+            <h5 class="modal-title">How:</h5>
             	<p> Generación de targts sinteticos para representar el potencial de ventas del producto y predicción en base a métodos de Gradient Boosting. Para el tratamiento de los atributos se utilizan ténicas de NLP, series temporales y algoritmos de clasificación no supervisados.<p>
-            <h5 class="modal-title">Rol desempeñado:</h5>
+            <h5 class="modal-title">My role:</h5>
             	<p>Desarrollador.<p>
           </div>
         </div><!-- /.modal-content -->
@@ -606,7 +606,7 @@
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Long term stock forecast and management</h4>
-            <h5 class="modal-title">Company:</h5>
+            <h5 class="modal-title">Where:</h5>
             	<p>Nextail.<p>
         	<h5 class="modal-title">What:</h5>
             	<p>Long-term product sales forecasting (seasons) taking into account the different production, delivery, transportation to warehouse and store deadlines so that the stock is not broken in the given period of time.</p>
