Translate: Road signs optimal location

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/trafficsignals.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Espaciamiento de señalización vial</h4>
+                                <h4>Road signs optimal location</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem7"><span class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="https://www.lamoncloa.gob.es/serviciosdeprensa/notasprensa/mir/Paginas/2017/310117zoidoseguridadvial.aspx"><span class="glyphicon glyphicon-link"></span></a>
                             </div><!-- /.portfolio-item-info -->
@@ -533,15 +533,15 @@
             <img class="img-res" src="assets/img/trafficsignals.jpg" alt="">
           </div>
           <div class="modal-body">
-            <h4 class="modal-title">Espaciamiento de señalización vial</h4>
+            <h4 class="modal-title">Road signs optimal location</h4>
             <h5 class="modal-title">Where:</h5>
-            	<p>CPS Infraestructuras Movilidad y Medio Ambiente para Dirección General de Tráfico.<p>
+            	<p>CPS Infraestructuras Movilidad y Medio Ambiente for Spanish public agency for traffic.<p>
         	<h5 class="modal-title">What:</h5>
-            	<p>Dentro del programa de Refuerzo de seguridad en zonas de adelantamiento con mayor siniestralidad de la DGT, se realizó un estudio sobre la saturación de señales de limitación de velocidad y aviso de peligros que se daba en determinadas carreteras secundarias. Estas se redujeron o espaciaron adecuadamente para facilitar la atención de los conductores.</p>
+            	<p>As part of the DGT's program to reinforce safety in overtaking zones with the highest accident rates, a study was carried out on the saturation of speed limit and danger warning signs on certain secondary roads. These were reduced or spaced appropriately to facilitate drivers' attention.</p>
             <h5 class="modal-title">How:</h5>
-            	<p>Se emplearon teorías básicas de atención y vigilancia humana aplicadas a la señalización vertical.<p>
+            	<p>Basic theories of human attention and vigilance applied to vertical signaling were used.<p>
             <h5 class="modal-title">My role:</h5>
-            	<p>Ingeniero de transportes.<p>
+            	<p>Mobility engineer.<p>
 		  </div>
           <div class="modal-footer">
             <a href="http://www.dgt.es/es/prensa/notas-de-prensa/2017/20170131-juan-ignacio-zoido-nuevas-medidas-ministerio-reducir-accidentalidad-carretera.shtml" class="btn btn-fill">Enlace a noticia</a>
