Translate: Inert waste management system

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                         <div class="portfolio-item">
                             <img src="https://e00-elmundo.uecdn.es/assets/multimedia/imagenes/2019/04/12/15550852822442.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Sistema gestión de resíduos inertes</h4>
+                                <h4>Inert waste management system</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem8"><span class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="https://marmoldealicante.com/la-asociacion/servicios"><span class="glyphicon glyphicon-link"></span></a>
                             </div><!-- /.portfolio-item-info -->
@@ -558,15 +558,15 @@
             <img class="img-res" src="https://e00-elmundo.uecdn.es/assets/multimedia/imagenes/2019/04/12/15550852822442.jpg" alt="">
           </div>
           <div class="modal-body">
-            <h4 class="modal-title">Sistema gestión de resíduos inertes</h4>
+            <h4 class="modal-title">Inert waste management system</h4>
             <h5 class="modal-title">Where:</h5>
-            	<p>Freelance para Asociación de Marmol de Alicante.<p>
+            	<p>Freelance for Marble producers organization of Alicante.<p>
         	<h5 class="modal-title">What:</h5>
-            	<p>Se trata de la digitalización del sistema de gestión de residuos inertes utilizado por la Asociación de Marmol de Alicante que permitía a las empresas productoras verter sus resíduos en un deposito centralizado mediante un sistema de vales que tenían que comprar. Se desarrolla un sistema basado en web de gestión con perfiles de usuario específicos para la asociación, la empresa productora y los operarios del depósito. Se integra la trazabilidad, facturación y operaciones de la actividad. </p>
+            	<p>Digitalization of the inert waste management system used by the Marble Association of Alicante, which allowed the producing companies to dump their waste in a centralized deposit through a system of vouchers that they had to buy. A web-based management system is developed with specific user profiles for the association, the producer company and the deposit operators. Traceability, invoicing and operations of the activity are integrated.</p>
             <h5 class="modal-title">How:</h5>
-            	<p>Sistema basado en el cloud de AWS (DynamoDB+Lambda+Amplify+API Gateway) implementando web desarrollada en React JS.<p>
+            	<p>AWS cloud based system (DynamoDB+Lambda+Amplify+API Gateway) implementing web developed in React JS.<p>
             <h5 class="modal-title">My role:</h5>
-            	<p>Manager y desarrollador.<p>
+            	<p>Manager and dev.<p>
           </div>
           <div class="modal-footer">
             <a href="https://marmoldealicante.com/la-asociacion/servicios" class="btn btn-fill">Enlace a noticia</a>
