Translate: Public transport accesibility model

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/btnv5ia.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Modelo de accesibilidad al transporte público</h4>
+                                <h4>Public transportation accesibility model</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem5"><span class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="tfm.html"><span class="glyphicon glyphicon-link"></span></a>
                             </div><!-- /.portfolio-item-info -->
@@ -486,15 +486,15 @@
             <img class="img-res" src="assets/img/btnv5ia.jpg" alt="">
           </div>
           <div class="modal-body">
-            <h4 class="modal-title">Modelo de accesibilidad al transporte público. Alacant/Elx.</h4>
-            <h5 class="modal-title">UnivWhere:</h5>
+            <h4 class="modal-title">Public transportation accesibility model. Alacant/Elx.</h4>
+            <h5 class="modal-title">Where:</h5>
             	<p>Universitat Politècnica de València.<p>
         	<h5 class="modal-title">What:</h5>
-            	<p>En el ambito del desarrollo del PMoMe Alacant/Elx se desarrolla un modelo que permite calcular el índice de accesibilidad al transporte público en base a la población y su distribución espacial. En el link se puede visualizar parte de los resultados.</p>
+            	<p>Under the context of the Alacant/Elx Metropolitan Area Mability Plan works. Development of a model that allows to calculate the index of accessibility to public transport based on the population and its spatial distribution. In the link you can see part of the results.</p>
             <h5 class="modal-title">How:</h5>
-            	<p>Se utilizan herramientas de GIS (Sistemas de Información Geográfica) basadas en Python, utilizando algoritmos de busqueda de vecinos cercanos como KDTree.<p>
+            	<p>Python-based GIS (Geographic Information Systems) tools are used, using nearest neighbor search algorithms such as KDTree.<p>
             <h5 class="modal-title">My role:</h5>
-            	<p>Autor único.<p>
+            	<p>Author.<p>
           </div>
           <div class="modal-footer">
             <a href="tfm.html" class="btn btn-fill">Demo en vivo</a>
