Translate: Truck load forecasting

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                         <div class="portfolio-item">
                             <img src="https://valenciaplaza.com/public/Image/2020/1/1579188529aqua_NoticiaAmpliada.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Predicción de carga de vehículos de reparto</h4>
+                                <h4>Truck load forecasting</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem2"><span class="glyphicon glyphicon-eye-open"></span></a>
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
@@ -420,15 +420,15 @@
             <img class="img-res" src="https://valenciaplaza.com/public/Image/2020/1/1579188529aqua_NoticiaAmpliada.jpg" alt="">
           </div>
           <div class="modal-body">
-            <h4 class="modal-title">Predicción de carga de vehículos de reparto</h4>
+            <h4 class="modal-title">Truck load forecasting</h4>
             <h5 class="modal-title">Where:</h5>
             	<p>Aquaservice<p>
         	<h5 class="modal-title">What:</h5>
-            	<p>Cada día se realiza una predicción para cada camión de reparto y cada turno de las botellas que repartirá el día siguiente. Para ello se utilizan técnicas de gradient boosting teniendo en cuenta variables propias de la operativa, información de los clientes a repartir así como de la veteranía de los repartidores. Se obtienen ahorros superiores al 30% de carga que no iba a ser repartida.</p>
+            	<p>Daily (day ahead) bottle delivery forecast for each delivery truck and each shift. For this purpose gradient boosting techniques are used taking into account operational variables, information on the customers to be delivered and the seniority of the delivery drivers. Getting savings of more than 30% of the load that was not going to be delivered.</p>
             <h5 class="modal-title">How:</h5>
-            	<p>Para ello se utilizan técnicas de gradient boosting teniendo en cuenta variables propias de la operativa, información de los clientes a repartir así como de la veteranía de los repartidores.<p>
+            	<p>For this purpose, gradient boosting techniques are used, taking into account variables specific to the operation, information on the customers to be delivered as well as the seniority of the delivery personnel.<p>
             <h5 class="modal-title">My role:</h5>
-            	<p>Lider de equipo y desarrollador.<p>
+            	<p>Team lead and dev.<p>
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
